tests/repositories/snapshots/meson/cli/meson.build.snap
---
source: tests/common/mod.rs
expression: content
---
# C files contained in the directory
cli_src = files('Meson_project.cpp')

# Create a new executable
Meson_project_cli = executable(
    'Meson-project', # Executable name
    cli_src, # Executable files
    install: true, # Install the executable in some default filesystem positions
    include_directories: incs, # Directories to be included when building the executable
    dependencies: Meson_project_dep # Libraries to be linked at the executable
)

