tests/repositories/snapshots/meson/cli/meson_template.c.snap
---
source: tests/common/mod.rs
expression: content
---
#include "meson_template.h"

int main()
{

}

